--- a/src/views/viewCar.ejs
+++ b/src/views/viewCar.ejs
@@ -15,7 +15,7 @@
         <title>Avaliação</title>
     </head>
     
-    <body class='modeAtual' onload="updateMarker(<%= car['CarInfo.Latitude'] %>, <%= car['CarInfo.Longitude'] %>)">
+    <body class='modeAtual' onload="updateMarker(<%= car.Latitude %>, <%= car.Longitude %>)">
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
