--- a/src/views/registerUser.ejs
+++ b/src/views/registerUser.ejs
@@ -39,7 +39,7 @@
 
         <div class="mb-3">
           <label for="userTel" class="form-label">Telefone</label>
-          <input type="text" inputmode="numeric" id="userTel" class="form-control" name="telefone" placeholder="Digite seu Telefone" required>
+          <input type="text" inputmode="numeric" id="userTel" class="form-control" name="telefone" placeholder="Exemplo: 55 (41) 99999-9999" oninput="formatPhone(this)" required>
         </div>
 
         <div class="mb-3">
