--- a/src/views/minhaConta.ejs
+++ b/src/views/minhaConta.ejs
@@ -54,6 +54,11 @@
                   <input type="text" class="form-control" id="userEmail" name="userEmail" value="<%=currentUser.Email %>">
                 </div>
 
+                <div class="col-12">
+                  <label for="inputAddress" class="form-label">Telefone</label>
+                  <input type="text" class="form-control" id="userTelefone" name="userTelefone" oninput="formatPhone(this)" value="<%=currentUser.Telefone%>">
+                </div>
+
                 <!-- <div class="col-12">
                   <label for="inputAddress" class="form-label">Senha</label>
                   <input type="text" class="form-control" id="userPassword" name="userPassword" value="<%=//currentUser.Password%>">
@@ -98,6 +103,18 @@
     } else {
         voltar.href = "/homePageUser/<%=currentUser.IDUser%>";
     }
+
+    function formatPhone(input) {
+    let phone = input.value.replace(/\D/g, ''); // Remove tudo que não for número
+
+    if (phone.length <= 13) { 
+      const formatted = phone.replace(/^(\d{2})(\d{2})(\d{5})(\d{4})$/, '+$1 ($2) $3-$4');
+      input.value = formatted;
+    } else {
+      input.value = input.value.slice(0, input.maxLength); 
+    }
+  }
+
 
     </script>
 
