--- a/src/views/allCars.ejs
+++ b/src/views/allCars.ejs
@@ -56,7 +56,7 @@
                          <div class="card-content">
                              <h1> Placa: <%= vehicles[i].Plate %></h1>
                              <h1> Ano: <%=  vehicles[i].Year %></h1>
-                             <h1> Dono: <%=  vehicles[i].Name%></h1>
+                             <h1> Dono: <%=  users[vehicles[i].IDUser -1].Name%></h1>
                          </div>
                 </div>
 
