--- a/src/views/codigoRecuperacao.ejs
+++ b/src/views/codigoRecuperacao.ejs
@@ -17,7 +17,7 @@
 
     <header>
         <a href="/recuperarSenha"><button type="submit" id="voltar" class="btn btn-primary button">Voltar</button></a>
-      <div class="logo" style="margin-top: 15%;"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvSTvqQvA7WuJQm47fleJFI3bQ9Q3KXKwxTg&s" alt=""></div>
+      <div class="logo" style="margin-top: 15%;"><img src="/img/logo.png"></div>
     </header>
 
     <main>
