--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -13,8 +13,7 @@
 
   <header>
     <div class="logo" style="margin-top: 15vh;">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvSTvqQvA7WuJQm47fleJFI3bQ9Q3KXKwxTg&s" alt="">
-    </div>
+      <img src="/img/logo.png">
   </header>
 
   <main>
