--- a/src/views/minhaConta.ejs
+++ b/src/views/minhaConta.ejs
@@ -51,7 +51,7 @@
                 </div>
                 <div class="col-12">
                   <label for="inputAddress" class="form-label">Email</label>
-                  <input type="text" class="form-control" id="userEmail" name="userEmail" value="<%=currentUser.Email %>">
+                  <input type="email" class="form-control" id="userEmail" name="userEmail" value="<%=currentUser.Email %>">
                 </div>
 
                 <div class="col-12">
