--- a/src/views/registerUser.ejs
+++ b/src/views/registerUser.ejs
@@ -19,7 +19,7 @@
 
     <header>
         <a href="/"><button type="submit" id="voltar" class="btn btn-primary button">Voltar</button></a>
-        <div class="logo"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvSTvqQvA7WuJQm47fleJFI3bQ9Q3KXKwxTg&s" alt=""></div>
+        <div class="logo"><img src="/img/logo.png"></div>
     </header>
 
     <main>
