--- a/src/views/viewCar.ejs
+++ b/src/views/viewCar.ejs
@@ -4,7 +4,6 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="/css/mapStyle.css">
         <link rel="stylesheet" href="/css/car.css">
         <link rel="stylesheet" href="/css/setMode.css">
@@ -12,6 +11,8 @@
         <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
         <script src="/js/mapScript.js" defer></script>
         <script src="/js/setMode.js" defer></script>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <title>Avaliação</title>
     </head>
     
@@ -19,10 +20,12 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
         integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 
 
     <!-- Modal Editar -->
@@ -115,7 +118,7 @@
                 <p><strong>Modelo:</strong> <%= car.Model %></p>
                 <p><strong>Placa:</strong> <%= car.Plate %></p>
                 <p><strong>Ano:</strong> <%= car.Year %></p>
-                <p><strong>Quilometragem:</strong> <%= car.Kms %></p>
+                <p><strong>Quilometragem:</strong> <%= car.KMs %> KM</p>
                 <p><strong>Gasolina (Litros):</strong> <%= car.Gas %></p>
                 <p><strong>Nível de Óleo:</strong> <%= car.Oil ? 'Ok': 'Baixo' %></p>
                 <p><strong>Temperatura:</strong> <%= car.Temperature %>°</p>
