--- a/src/views/registerCar.ejs
+++ b/src/views/registerCar.ejs
@@ -29,7 +29,7 @@
         <form action="/registerCar/<%= user %>" method="post">
               <div class="mb-3">
                 <label for="carPlate" class="form-label">Placa</label>
-                <input onblur="main()" type="text" id="carPlate" class="form-control" name="plate" placeholder="Digite a placa de seu carro" required>
+                <input  type="text" id="carPlate" class="form-control" name="plate" placeholder="Digite a placa de seu carro" required>
               </div>
 
               <div class="mb-3">
